Fixed spacing

--- a/style.css
+++ b/style.css
@@ -4,8 +4,7 @@ html, body {
     overflow-x: hidden;
 }
 .wrapper {
-    width:100%;
-    height:100%;
+    height:95%;
     position: static;
 }
 #backgound {
